5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/224/users/4345/executions/1577_2896.log
== TEST (2019-03-21 18:38:24) 
-- CODE:
# Use este codigo como ponto de partida

# Leitura de valores de entrada
var = (Python)

# Impressao de saidas
print(Python)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    var = (Python)
NameError: name 'Python' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-21 18:38:36) 
-- CODE:
# Use este codigo como ponto de partida

# Leitura de valores de entrada
var =Python

# Impressao de saidas
print(Python)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    var =Python
NameError: name 'Python' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-21 18:39:00) 
-- CODE:
# Use este codigo como ponto de partida

# Leitura de valores de entrada
var = input (Python)

# Impressao de saidas
print(Python)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    var = input (Python)
NameError: name 'Python' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-21 18:39:40) 
-- CODE:
# Use este codigo como ponto de partida

# Leitura de valores de entrada
var = input (Python)

# Impressao de saidas
print(var= input (Python)
-- ERROR:
File "XXXX", line 8
    
                             ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-21 18:39:49) 
-- CODE:
# Use este codigo como ponto de partida

# Leitura de valores de entrada
var = input (Python)

# Impressao de saidas
print(var= input (Python))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    var = input (Python)
NameError: name 'Python' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-21 18:40:07) 
-- CODE:
# Use este codigo como ponto de partida

# Leitura de valores de entrada
var = input(Python)

# Impressao de saidas
print(var= input (Python))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    var = input(Python)
NameError: name 'Python' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-21 18:40:22) 
-- CODE:
# Use este codigo como ponto de partida

# Leitura de valores de entrada
var=input(Python)

# Impressao de saidas
print(var= input (Python))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    var=input(Python)
NameError: name 'Python' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-21 18:40:36) 
-- CODE:

print(var= input (Python))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    print(var= input (Python))
NameError: name 'Python' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 18:46:23) 
-- CODE:
# Use este codigo como ponto de partida

# Leitura de valores de entrada
var = input (Python)

# Impressao de saidas
print (var=input)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    var = input (Python)
NameError: name 'Python' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 18:46:40) 
-- CODE:
# Use este codigo como ponto de partida

# Leitura de valores de entrada
var= input (Python)

# Impressao de saidas
print (var=input)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    var= input (Python)
NameError: name 'Python' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 18:46:53) 
-- CODE:
# Use este codigo como ponto de partida

# Leitura de valores de entrada
var= input (Python)

# Impressao de saidas
print(var=input)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    var= input (Python)
NameError: name 'Python' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 18:50:12) 
-- CODE:
var=input(Fernando)
print (var)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    var=input(Fernando)
NameError: name 'Fernando' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 18:50:37) 
-- CODE:
var=input("Fernando")
print (var)
-- OUTPUT:
Ada_Lovelace
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-26 18:50:41) 
-- CODE:
var=input("Fernando")
print (var)
-- EXECUTION TIME:
0.251018
-- TEST CASE 1:
---- input:
Ada_Lovelace
---- correct output:
Ada_Lovelace
---- user output:
Ada_Lovelace
-- TEST CASE 2:
---- input:
Teste
---- correct output:
Teste
---- user output:
Teste
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
